
Rolled back changes done in 1.0.7 to handle large strings due to performance issues.

You can now use environment variable SNAKECHARMR_PYTHONPATH to override PYTHONPATH during installation. This should help fix some installation problems in environments with multiple Python versions installed.


SnakeCharmR 1.0.7
=================
Avoid tripping maximum R string size when reading large data objects from Python. The JSON string
string read from Python is stored into a raw vector, which is then read with jsonlite's push parser
through a rawConnection.

Should now compile on Windows using the Rtools Python libraries or the standard Python
package. Many thanks to Matthew Fidler (https://github.com/mattfidler), his help was invaluable
in helping implement and test this.

Added Appveyor tests for the Windows build.


SnakeCharmR 1.0.6
=================
Fixed compilation on Python 3, fixing https://github.com/asieira/SnakeCharmR/issues/33. Thanks to https://github.com/lfdmotta for reporting this.

Updated Travis tests to cover Python 2 and 3, and also current and devel versions of R.

Startup message will now include contents of Python `sys.version` information.


SnakeCharmR 1.0.5
=================
Cleaned up configure.ac and src/Makevars.in to remove unnecessary steps inherited from RPython code.

Fixed issue with logo image in README file in CRAN page.

Updated versions of package dependencies.


SnakeCharmR 1.0.4
=================
Fixed https://github.com/asieira/SnakeCharmR/issues/24. Thanks to David Severski (@dseverski)
for reporting this.


SnakeCharmR 1.0.3
=================
Took measures to ensure SnakeCharmR will work properly on systems where the native encoding is not UTF-8:

* Use Python API to check if variable is str/bytes or unicode and handling things correctly. In particular, when we read Python unicode values we flag the resulting R string as UTF-8 since that’s what we Python C API we are using will return;
