@@ -1,8 +1,8 @@
 # Generated by using Rcpp::compileAttributes() -> do not edit by hand
 # Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
 
-rcpp_Py_Initialize <- function() {
-    invisible(.Call(`_SnakeCharmR_rcpp_Py_Initialize`))
+rcpp_Py_Initialize <- function(command) {
+    invisible(.Call(`_SnakeCharmR_rcpp_Py_Initialize`, command))
 }
 
 rcpp_Py_Finalize <- function() {
